--- a/src/app/features/employees/employees.component.html
+++ b/src/app/features/employees/employees.component.html
@@ -1,1 +1,5 @@
-<p>employees works!</p>
+<div class="employees-container">
+  <h2>Gestão de Funcionários</h2>
+
+  <router-outlet></router-outlet>
+</div>
