inserindo funcionalidade listar funcionarios

--- a/src/app/features/employees/form/form.component.html
+++ b/src/app/features/employees/form/form.component.html
@@ -1,6 +1,11 @@
 <div class="form-container">
     <h2>{{ isEditMode ? 'Editar Funcionário' : 'Novo Funcionário' }}</h2>
-
+    <!-- Botão de listar acima do formulário -->
+    <div class="top-actions">
+        <button mat-stroked-button color="accent" type="button" (click)="goToList()">
+            Listar Funcionários
+        </button>
+    </div>
     <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
         <!-- Nome -->
         <mat-form-field appearance="outline" class="full-width">
@@ -18,7 +23,7 @@
         <mat-form-field appearance="outline" class="full-width">
             <mat-label>Data de Nascimento</mat-label>
             <input matInput type="date" formControlName="birthDate" required>
-            <mat-error *ngIf="employeeForm.get('birth_date')?.hasError('required')">
+            <mat-error *ngIf="employeeForm.get('birthDate')?.hasError('required')">
                 Data de nascimento é obrigatória
             </mat-error>
             <mat-error *ngIf="employeeForm.get('birthDate')?.hasError('date')">
