--- a/src/app/features/employees/form/form.component.scss
+++ b/src/app/features/employees/form/form.component.scss
@@ -12,3 +12,10 @@
     justify-content: space-between;
     margin-top: 20px;
   }
+
+
+  .top-actions {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 16px;
+  }
