--- a/src/app/features/employees/list/list.component.html
+++ b/src/app/features/employees/list/list.component.html
@@ -1,34 +1,36 @@
 <div class="employee-list">
+  <div class="toolbar">
     <h2>Funcionários</h2>
     <button mat-raised-button color="primary" [routerLink]="['/employees/new']">
       Novo Funcionário
     </button>
-  
-    <table mat-table [dataSource]="employees" class="mat-elevation-z8">
-  
-      <!-- Nome -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let employee"> {{ employee.name }} </td>
-      </ng-container>
-  
-      <!-- Cargo -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> Cargo </th>
-        <td mat-cell *matCellDef="let employee"> {{ employee.position }} </td>
-      </ng-container>
-  
-      <!-- Ações -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Ações </th>
-        <td mat-cell *matCellDef="let employee">
-          <button mat-button color="accent" [routerLink]="['/employees/edit', employee.id]">Editar</button>
-          <button mat-button color="warn" (click)="delete(employee.id)">Excluir</button>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-    </table>
   </div>
+
+  <table mat-table [dataSource]="employees" class="mat-elevation-z8">
+
+    <!-- Nome -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Nome </th>
+      <td mat-cell *matCellDef="let employee"> {{ employee.name }} </td>
+    </ng-container>
+
+    <!-- Cargo -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> Cargo </th>
+      <td mat-cell *matCellDef="let employee"> {{ employee.position }} </td>
+    </ng-container>
+
+    <!-- Ações -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Ações </th>
+      <td mat-cell *matCellDef="let employee">
+        <button mat-button color="accent" [routerLink]="['/employees/edit', employee.id]">Editar</button>
+        <button mat-button color="warn" (click)="delete(employee.id)">Excluir</button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+</div>
