--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav>
-    <a routerLink="/employees">Funcionários</a> |
-    <a routerLink="/vacations">Férias</a> |
-    <a routerLink="/dayoffs">Folgas</a> |
-    <a routerLink="/shifts">Turnos</a> |
-    <a routerLink="/schedules">Escalas</a>
-  </nav>
-  <hr>
-  <router-outlet></router-outlet>
+  <a routerLink="/employees" routerLinkActive="active">Funcionários</a>
+  <a routerLink="/vacations" routerLinkActive="active">Férias</a>
+  <a routerLink="/dayoffs" routerLinkActive="active">Folgas</a>
+  <a routerLink="/shifts" routerLinkActive="active">Turnos</a>
+  <a routerLink="/schedules" routerLinkActive="active">Escalas</a>
+</nav>
+<hr>
+<router-outlet></router-outlet>
