estilização dos botões

--- a/src/app/features/dayoffs/dayoffs.component.html
+++ b/src/app/features/dayoffs/dayoffs.component.html
@@ -1,2 +1,4 @@
-
-<router-outlet></router-outlet>
+<!-- dayoffs.component.html -->
+<div class="dayoffs-container">
+    <router-outlet></router-outlet> <!-- Aqui o conteúdo das rotas será renderizado -->
+  </div>
