integração com o backend local

--- a/src/app/features/employees/employees.component.html
+++ b/src/app/features/employees/employees.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<div class="employees-wrapper">
+    <router-outlet></router-outlet> <!-- Aqui o conteúdo das rotas filhas será renderizado -->
+  </div>
