--- a/src/app/features/employees/list/list.component.html
+++ b/src/app/features/employees/list/list.component.html
@@ -2,11 +2,11 @@
   <div class="toolbar">
     <h2>Funcionários</h2>
     <button mat-raised-button color="primary" [routerLink]="['/employees/new']">
-      Novo Funcionário
+      <mat-icon>person_add</mat-icon> Novo Funcionário
     </button>
   </div>
 
-  <table mat-table [dataSource]="employees" class="mat-elevation-z8">
+  <table mat-table [dataSource]="employees" class="mat-elevation-z8 full-width-table">
 
     <!-- Nome -->
     <ng-container matColumnDef="name">
@@ -14,23 +14,38 @@
       <td mat-cell *matCellDef="let employee"> {{ employee.name }} </td>
     </ng-container>
 
-    <!-- Cargo -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> Cargo </th>
-      <td mat-cell *matCellDef="let employee"> {{ employee.position }} </td>
+    <!-- Data de Nascimento -->
+    <ng-container matColumnDef="birthDate">
+      <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+      <td mat-cell *matCellDef="let employee"> {{ employee.birthDate | date:'dd/MM/yyyy' }} </td>
+    </ng-container>
+
+    <!-- E-mail -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> E-mail </th>
+      <td mat-cell *matCellDef="let employee"> {{ employee.email }} </td>
+    </ng-container>
+
+    <!-- Telefone -->
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef> Telefone </th>
+      <td mat-cell *matCellDef="let employee"> {{ employee.phone }} </td>
     </ng-container>
 
     <!-- Ações -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Ações </th>
       <td mat-cell *matCellDef="let employee">
-        <button mat-button color="accent" [routerLink]="['/employees/edit', employee.id]">Editar</button>
-        <button mat-button color="warn" (click)="delete(employee.id)">Excluir</button>
+        <button mat-icon-button color="accent" [routerLink]="['/employees/edit', employee.id]">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="delete(employee.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
   </table>
 </div>
