--- a/src/app/features/schedules/calendar/calendar.component.html
+++ b/src/app/features/schedules/calendar/calendar.component.html
@@ -2,6 +2,6 @@
     <h2>Escala 12x36</h2>
     <button mat-raised-button color="primary" (click)="generateSchedule()">Gerar Escala</button>
   
-    <full-calendar [options]="calendarOptions"></full-calendar>
+    <full-calendar #fullcalendar [options]="calendarOptions"></full-calendar>
   </div>
   
