--- a/src/app/features/dayoffs/list/list.component.html
+++ b/src/app/features/dayoffs/list/list.component.html
@@ -5,23 +5,27 @@
   </div>
 
   <table mat-table [dataSource]="dayOffs">
+    <!-- Coluna: Funcionário ID -->
     <ng-container matColumnDef="employeeId">
-      <th mat-header-cell *matHeaderCellDef> Funcionário ID </th>
-      <td mat-cell *matCellDef="let dayOff"> {{ dayOff.employeeId }} </td>
+      <th mat-header-cell *matHeaderCellDef>Funcionário ID</th>
+      <td mat-cell *matCellDef="let dayOff">{{ dayOff.employeeId }}</td>
     </ng-container>
 
+    <!-- Coluna: Data -->
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Data </th>
-      <td mat-cell *matCellDef="let dayOff"> {{ dayOff.date | date }} </td>
+      <th mat-header-cell *matHeaderCellDef>Data</th>
+      <td mat-cell *matCellDef="let dayOff">{{ dayOff.date | date }}</td>
     </ng-container>
 
+    <!-- Coluna: Motivo -->
     <ng-container matColumnDef="reason">
-      <th mat-header-cell *matHeaderCellDef> Motivo </th>
-      <td mat-cell *matCellDef="let dayOff"> {{ dayOff.reason || 'Folga' }} </td>
+      <th mat-header-cell *matHeaderCellDef>Motivo</th>
+      <td mat-cell *matCellDef="let dayOff">{{ dayOff.reason || 'Folga' }}</td>
     </ng-container>
 
+    <!-- Coluna: Ações -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Ações </th>
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let dayOff">
         <button mat-button color="primary" [routerLink]="['/dayoffs/edit', dayOff.id]">Editar</button>
         <button mat-button color="warn" (click)="deleteDayOff(dayOff.id)">Excluir</button>
@@ -31,8 +35,4 @@
     <tr mat-header-row *matHeaderRowDef="['employeeId', 'date', 'reason', 'actions']"></tr>
     <tr mat-row *matRowDef="let row; columns: ['employeeId', 'date', 'reason', 'actions'];"></tr>
   </table>
-
 </div>
-
-
-
