--- a/src/app/features/schedules/calendar/calendar.component.html
+++ b/src/app/features/schedules/calendar/calendar.component.html
@@ -1,9 +1,30 @@
-<div class="schedule-calendar">
+<!-- <div class="schedule-calendar">
     <h2>Escala 12x36</h2>
     <button mat-raised-button color="primary" (click)="generateSchedule()">Gerar Escala</button>
     <button (click)="deleteAllSchedules()" class="btn btn-danger">
       Apagar Escala
     </button>
+    <full-calendar #fullcalendar [options]="calendarOptions"></full-calendar>
+  </div>
+   -->
+
+
+   <div class="schedule-calendar">
+    <h2>Escala 12x36</h2>
+  
+    <!-- Botões para gerar e apagar escala -->
+    <div class="button-group">
+      <button mat-raised-button color="primary" class="generate-button" (click)="generateSchedule()">
+        Gerar Escala
+      </button>
+      <button (click)="deleteAllSchedules()" class="btn btn-danger"> 
+      Apagar Escala
+      <!--<button mat-raised-button color="warn" class="delete-button" (click)="deleteAllSchedules()">
+        Apagar Escala -->
+      </button>
+    </div>
+  
+    <!-- Calendário -->
     <full-calendar #fullcalendar [options]="calendarOptions"></full-calendar>
   </div>
   
