--- a/src/app/features/dayoffs/list/list.component.html
+++ b/src/app/features/dayoffs/list/list.component.html
@@ -5,16 +5,17 @@
   </div> 
 
   <table mat-table [dataSource]="dayOffs">
-    <!-- Coluna: Funcionário ID --> 
-    <ng-container matColumnDef="employeeId">
-      <th mat-header-cell *matHeaderCellDef>Funcionário ID</th>
-      <td mat-cell *matCellDef="let dayOff">{{ dayOff.employeeId }}</td>
+
+    <!-- Coluna: Funcionário --> 
+    <ng-container matColumnDef="employeeName">
+      <th mat-header-cell *matHeaderCellDef>Funcionário</th>
+      <td mat-cell *matCellDef="let dayOff">{{ getEmployeeName(dayOff.employee_id || dayOff.employeeId) }}</td>
     </ng-container>
 
     <!-- Coluna: Data -->
-    <ng-container matColumnDef="date">
+    <ng-container matColumnDef="day">
       <th mat-header-cell *matHeaderCellDef>Data</th>
-      <td mat-cell *matCellDef="let dayOff">{{ dayOff.date | date }}</td>
+      <td mat-cell *matCellDef="let dayOff">{{ dayOff.day | date: 'dd/MM/yyyy' }}</td>
     </ng-container>
 
     <!-- Coluna: Motivo --> 
@@ -23,7 +24,7 @@
       <td mat-cell *matCellDef="let dayOff">{{ dayOff.reason || 'Folga' }}</td>
     </ng-container>
 
-     Coluna: Ações 
+    <!-- Coluna: Ações -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let dayOff">
@@ -32,10 +33,10 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['employeeId', 'date', 'reason', 'actions']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['employeeId', 'date', 'reason', 'actions'];"></tr>
+    <!-- Cabeçalho da Tabela -->
+    <tr mat-header-row *matHeaderRowDef="['employeeName', 'day', 'reason', 'actions']"></tr>
+    <!-- Linhas da Tabela -->
+    <tr mat-row *matRowDef="let row; columns: ['employeeName', 'day', 'reason', 'actions'];"></tr>
+
   </table>
 </div>
-
-
-
