--- a/src/app/features/vacations/form/form.component.html
+++ b/src/app/features/vacations/form/form.component.html
@@ -1,1 +1,46 @@
-<p>form works!</p>
+<div class="vacation-form">
+  <h2>{{ isEditMode  ? 'Editar Folga' : 'Adicionar Folga' }}</h2>
+
+
+  <form [formGroup]="vacationForm" (ngSubmit)="onSubmit()">
+    <div class="form-fields">
+      
+      <!-- Campo: Funcionário -->
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Funcionário</mat-label>
+        <mat-select formControlName="employeeId" required>
+          <mat-option *ngFor="let employee of employees" [value]="employee.id">
+            {{ employee.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- Campo: Data da folga -->
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Data da Folga</mat-label>
+        <input
+         matInput 
+         [matDatepicker]="picker" 
+         formControlName="date" 
+         [matDatepickerFilter]="filterValidDate"
+         >
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+
+      <!-- Campo: Motivo -->
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Motivo (opcional)</mat-label>
+        <input matInput formControlName="reason" type="text">
+      </mat-form-field>
+
+    </div>
+
+    <!-- Ações -->
+    <div class="form-actions">
+      <button mat-raised-button color="primary" type="submit" [disabled]="vacationForm.invalid">
+        {{ isEditMode  ? 'Atualizar' : 'Salvar' }}
+      </button>
+    </div>
+  </form>
+</div>
