--- a/src/app/features/vacations/form/form.component.html
+++ b/src/app/features/vacations/form/form.component.html
@@ -1,11 +1,11 @@
 <div class="vacation-form">
-  <h2>{{ isEditMode  ? 'Editar Folga' : 'Adicionar Folga' }}</h2>
+  <h2>{{ isEditMode  ? 'Editar Férias' : 'Adicionar Férias' }}</h2>
 
 
   <form [formGroup]="vacationForm" (ngSubmit)="onSubmit()">
     <div class="form-fields">
       
-      <!-- Campo: Funcionário -->
+      <!-- Funcionário -->
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Funcionário</mat-label>
         <mat-select formControlName="employeeId" required>
@@ -15,30 +15,30 @@
         </mat-select>
       </mat-form-field>
 
-      <!-- Campo: Período das férias -->
+      <!-- Início das férias -->
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Inicio</mat-label>
         <input
          matInput 
-         [matDatepicker]="picker" 
-         formControlName="date" 
+         [matDatepicker]="pickerStart" 
+         formControlName="startDate" 
          [matDatepickerFilter]="filterValidDate"
          >
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+        <mat-datepicker #pickerStart></mat-datepicker>
       </mat-form-field>
 
-
+      <!-- Fim das Férias -->
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Fim</mat-label>
         <input
          matInput 
-         [matDatepicker]="picker" 
-         formControlName="date" 
+         [matDatepicker]="pickerEnd" 
+         formControlName="endDate" 
          [matDatepickerFilter]="filterValidDate"
          >
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+        <mat-datepicker #pickerEnd></mat-datepicker>
       </mat-form-field>
 
     </div>
